tests/errors/parser/wrong-binary-num.expect
---CODE---
1
---STDERR---
Error: FuTIL Parser:  --> 4:16
  |
4 |     r.in = 10'b22;âŠ
  |                ^^
  |
  = Expected binary number
